--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,38 @@
-nav ul {
-  list-style-type: none;
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  gap: 20px;
-  text-decoration: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-nav ul li {
-  display: inline;
+.App-link {
+  color: #61dafb;
 }
 
-nav ul li a {
-  text-decoration: none;
-  color: blue;
-  font-weight: bold;
-}
-
-nav ul li a:hover {
-  color: darkblue;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
